--- a/pom.xml
+++ b/pom.xml
@@ -17,28 +17,23 @@
 		<app.runtime>4.4.0</app.runtime>
 		<mule.maven.plugin.version>3.5.2</mule.maven.plugin.version>
 	</properties>
-	
 	<profiles>
-	
-	<profile>
-	<id>DEV</id>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-				
-				<cloudHubDeployment>
-				
+		<profile>
+			<id>DEV</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.mule.tools.maven</groupId>
+						<artifactId>mule-maven-plugin</artifactId>
+						<version>${mule.maven.plugin.version}</version>
+						<extensions>true</extensions>
+						<configuration>
+							<cloudHubDeployment>
 								<applicationName>uho-ntpl-dev-aws-sapi</applicationName>
 								<environment>Dev</environment>
 								<region>us-east-2</region>
 								<workers>1</workers>
 								<workerType>Micro</workerType>
-								
 								<properties>
 									<api.id>17491676</api.id>
 									<env>dev</env>
@@ -46,36 +41,29 @@
 									<anypoint.platform.client_id>${client_id}</anypoint.platform.client_id>
 									<anypoint.platform.client_secret>${client_secret}</anypoint.platform.client_secret>
 								</properties>
-							
-				</cloudHubDeployment>
-				
-					<classifier>mule-application</classifier>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	
-	</profile>
-	
-	<profile>
-	<id>TEST</id>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-				
-				<cloudHubDeployment>
-				
+							</cloudHubDeployment>
+							<classifier>mule-application</classifier>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+		<profile>
+			<id>TEST</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.mule.tools.maven</groupId>
+						<artifactId>mule-maven-plugin</artifactId>
+						<version>${mule.maven.plugin.version}</version>
+						<extensions>true</extensions>
+						<configuration>
+							<cloudHubDeployment>
 								<applicationName>uho-ntpl-test-aws-sapi</applicationName>
 								<environment>Test</environment>
 								<region>us-east-2</region>
 								<workers>1</workers>
 								<workerType>Micro</workerType>
-								
 								<properties>
 									<api.id>17491678</api.id>
 									<env>dev</env>
@@ -83,17 +71,13 @@
 									<anypoint.platform.client_id>${client_id}</anypoint.platform.client_id>
 									<anypoint.platform.client_secret>${client_secret}</anypoint.platform.client_secret>
 								</properties>
-							
-				</cloudHubDeployment>
-				
-					<classifier>mule-application</classifier>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	
-	</profile>
-	
+							</cloudHubDeployment>
+							<classifier>mule-application</classifier>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
 	</profiles>
 
 	<build>
@@ -109,19 +93,17 @@
 				<version>${mule.maven.plugin.version}</version>
 				<extensions>true</extensions>
 				<configuration>
-				
-				<cloudHubDeployment>
-			      <uri>https://anypoint.mulesoft.com</uri>
-			      <muleVersion>4.4.0</muleVersion>
-			      <username>${username}</username>
-			      <password>${password}</password>
-			      <objectStoreV2>true</objectStoreV2>
-			      <properties>
-			        <anypoint.platform.base_uri>https://anypoint.mulesoft.com</anypoint.platform.base_uri>
-					<anypoint.platform.analytics_base_uri>https://analytics-ingest.anypoint.mulesoft.com</anypoint.platform.analytics_base_uri>
-			      </properties>
-			    </cloudHubDeployment>
-				
+					<cloudHubDeployment>
+						<uri>https://anypoint.mulesoft.com</uri>
+						<muleVersion>4.4.0</muleVersion>
+						<username>${username}</username>
+						<password>${password}</password>
+						<objectStoreV2>true</objectStoreV2>
+						<properties>
+							<anypoint.platform.base_uri>https://anypoint.mulesoft.com</anypoint.platform.base_uri>
+							<anypoint.platform.analytics_base_uri>https://analytics-ingest.anypoint.mulesoft.com</anypoint.platform.analytics_base_uri>
+						</properties>
+					</cloudHubDeployment>
 					<classifier>mule-application</classifier>
 				</configuration>
 			</plugin>
@@ -157,6 +139,12 @@
 			<groupId>com.mulesoft.connectors</groupId>
 			<artifactId>mule-amazon-s3-connector</artifactId>
 			<version>5.7.3</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-tracing-module</artifactId>
+			<version>1.0.0</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
